Add discount and PS Now section

--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,14 @@
     min-height: 400px;
 }
 
+#ps-now {
+    color: white;
+    background-color: rgb(12, 12, 78);
+}
+
 #new-titles {
     background-color: rgb(53, 53, 53);
+    min-height: 400px;
 }
 
 /* Cards */ 
