--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,17 @@
     flex-basis: calc(100% /5 - 10px * 4 /5);
 }
 
+.social-icon {
+    
+    width: 30px;
+}
+
+.social-icons-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
 /* Debug */ 
 .debug,
 .debug > * {
