Fix highlights grid

--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,8 @@
 }
 
 /* Debug */ 
-.debug,
-.debug > * {
+.debug {
     border: 3px dashed red;
-    padding: 6px;
+    background-color: aqua;
     min-height: 30px;
 }
