--- a/css/style.css
+++ b/css/style.css
@@ -24,33 +24,17 @@
 }
 
 #new-titles {
+    color: white;
     background-color: rgb(53, 53, 53);
     min-height: 400px;
 }
 
-/* Cards */ 
-.highlight-card-wrapper {
-    gap: 10px;
+/* Footer */ 
+footer {
+    background-color: rgb(0 67 156);
+    color: white;
 }
 
-.highlight-card {
-    flex-basis: calc(100% /6 - 10px * 5 /6)
-}
-
-.ps-shower-card {
-    flex-basis: calc(100% /5 - 10px * 4 /5);
-}
-
-.social-icon {
-    
-    width: 30px;
-}
-
-.social-icons-wrapper {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
 
 /* Debug */ 
 .debug {
