--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,21 @@
-/* Jumbotron */ 
 .main-jumbo {
-    background-image: url(../img/jumbo-bg.png);
-    background-size: cover;
     min-height: 500px;
-    color: white;
+    background-color: bisque;
 }
 
-.new-titles-jumbo {
-    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
-    background-size: cover;
-    min-height: 500px;
-    color: white;
-}
 
-#ps-store {
-    background-color: rgb(172, 172, 172);
-    min-height: 400px;
-}
 
-#ps-now {
-    color: white;
-    background-color: rgb(12, 12, 78);
-}
 
-#new-titles {
-    color: white;
-    background-color: rgb(53, 53, 53);
-    min-height: 400px;
-}
 
-/* Footer */ 
-footer {
-    background-color: rgb(0 67 156);
-    color: white;
-}
+
+
+
 
 
 /* Debug */ 
-.debug {
+.debug,
+.debug > * {
     border: 3px dashed red;
-    background-color: aqua;
+    padding: 6px;
     min-height: 30px;
 }
