--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,14 @@
     min-height: 30px;
 }
 
+
+/* Footer */ 
 footer {
     color: white;
-    background-color: blue;
+    background-color: rgb(0 67 156);
+}
+
+ul {
+    list-style: none;
+    padding-inline-start: 0;
 }
