--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,14 @@
     background-color: grey;
 }
 
+#ps-now {
+    background-color: darkblue;
+}
 
+.sony-bar {
+    padding: 10px;
+    background-color: black;
+}
 
 
 
