--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
 }
 
 #ps-now {
-    background-color: darkblue;
+    background-color: rgb(22 28 59);
 }
 
 /* Footer */ 
@@ -68,6 +68,11 @@ ul {
     padding-inline-start: 0;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 /* Effects */
 .thumb:hover {
     border-radius: 20px;
@@ -87,17 +92,18 @@ ul {
     opacity: 60%;
 }
 
-.discount-fx:hover {
+.scale-fx:hover {
     transform: scale(1.1);
 }
 
-.discount-fx {
+.scale-fx {
     transition: transform 0.1s linear;
 }
 
 /* Media Query */
 @media screen and (min-width: 1200px) {
-    .jumbo-internal-container {
+    .jumbo-internal-container,
+    .disclaimer {
         width: calc(100% / 3);
     }
 }
