--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 /* Navbar */ 
 .sony-navbar img {
     height: 15px;
@@ -58,6 +59,9 @@ footer img {
     height: 30px;
 }
 
+footer img.img-fluid {
+    height: 70px;
+}
 
 .disclaimer img {
     height: 50px;
@@ -66,11 +70,16 @@ footer img {
 ul {
     list-style: none;
     padding-inline-start: 0;
+    line-height: 30px;
 }
 
 a {
     text-decoration: none;
     color: white;
+}
+
+.disclaimer a {
+    text-decoration: underline;
 }
 
 /* Effects */
@@ -79,7 +88,6 @@ a {
     border: 2px solid blue;
     padding: 0.25rem;
 }
-
 
 .device:hover {
     border-bottom: 2px solid blue;
@@ -102,8 +110,13 @@ a {
 
 /* Media Query */
 @media screen and (min-width: 1200px) {
-    .jumbo-internal-container,
-    .disclaimer {
+    .jumbo-internal-container {
         width: calc(100% / 3);
     }
+
+    .disclaimer {
+        width: 55%;
+    }
 }
+
+
