--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@
 .new-publications-jumbo {
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
     background-size: cover;
-    background-position: top;
+    background-position: left;
 }
 
 .new-publications-jumbo-contents {
-    min-height: 600px;
+    min-height: 700px;
 }
 
 .new-publications-jumbo-contents img {
@@ -98,13 +98,16 @@ a {
 }
 
 /* Effects */
+#highlight p,
+#new-publications p,
+#highlight h2,
+#new-publications h2 {
+    text-shadow: 2px 2px 6px rgba(0,0,0, 0.8);
+}
+
 .thumb:hover {
     translate: 0 -5px;
     Box-shadow: 0px 3px 10px 1px rgba(0,0,0, 0.4);
-}
-
-#new-publications .thumb:hover {
-    Box-shadow: 0px 3px 10px 1px rgba(170, 170, 170, 0.4);
 }
 
 .thumb {
@@ -116,14 +119,23 @@ a {
     padding: 4px;
 }
 
+#new-publications .thumb:hover {
+    Box-shadow: 0px 3px 10px 1px rgba(170, 170, 170, 0.4);
+}
+
 .device:hover {
-    border-bottom: 2px solid blue;
     color: black;
+    opacity: 100%;
 }
 
 .device {
     color: grey;
     opacity: 60%;
+    transition: opacity 0.2s linear;
+}
+
+.device-active {
+    border-bottom: 2px solid blue;
 }
 
 .scale-fx:hover {
@@ -143,6 +155,13 @@ a {
     .disclaimer {
         width: 55%;
     }
+
+    .new-publications-jumbo {
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+    background-size: cover;
+    background-position: top;
+}
+
 }
 
 
